bug fix line wrap spacing

--- a/src/stylesheets/codeWindow.css
+++ b/src/stylesheets/codeWindow.css
@@ -21,10 +21,8 @@
 	-moz-osx-font-smoothing: auto;
 	text-rendering: optimizeLegibility;
 	font-weight: 400;
-	line-height: 50%;
-	padding-bottom: 20px;
-	padding-left: 40px;
-	padding-right: 40px;
+	line-height: 150%;
+	padding: 20px 40px;
 }
 
 .lineNumbersBar {
@@ -99,7 +97,6 @@
 
 .codeComment {
 	color: #919191;
-	line-height: 150%;
 }
 
 .codeReturn {
@@ -124,11 +121,9 @@
 
 .indentGuide {
 	border-left: 1px solid;
-	padding-top: 1px;
-	padding-bottom: 1px;
-	margin: -5px 0;
 	border-color: #353535;
 }
+
 
 [contenteditable]:focus {
 	outline: 0px solid transparent;
